# scy_program_laungage

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  fuck.txt  grammar.md
.github/workflows/: ci.yaml  ci.yml
app/: CMakeLists.txt  main.cpp
assets/: dot.dot
cmake/: FormatTools.cmake  GtestTools.cmake  ProjectCoverage.cmake  ProjectOptions.cmake  ProjectSanitizers.cmake  TidyTools.cmake
include/: ast.hpp  ast_visualizer.hpp  codegen.hpp  config.hpp  lexer.hpp  parser.hpp  scope.hpp  semantic_analyzer.hpp  semantic_error.hpp  symbol.hpp  token.hpp  type.hpp
src/: CMakeLists.txt  ast.cpp  ast_printer.cpp  ast_visualizer.cpp  codegen.cpp  lexer.cpp  parser.cpp  scope.cpp  semantic_analyzer.cpp  type.cpp
tests/: CMakeLists.txt
tests/scripts/: check_format.sh  check_tidy.py
tests/static/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/basic/: BasicUnit.cpp  CMakeLists.txt
tests/unit/codegen/: Basic.cpp  CMakeLists.txt
tests/unit/lexer/: Basic.cpp  CMakeLists.txt
tests/unit/parser/: Basic.cpp  CMakeLists.txt
tests/unit/semantic/: Basic.cpp  CMakeLists.txt
