if(ENABLE_FORMAT_CHECK)
  include(FormatTools)
  if(CLANG_FORMAT_EXE)
    message(STATUS "Format Check enabled. Found Clang-Format: ${CLANG_FORMAT_EXE}")
  else()
    message(WARNING "Format Check requested (ENABLE_FORMAT_CHECK=ON) but Clang-Format was NOT found. Check will be disabled.")
    set(ENABLE_FORMAT_CHECK OFF CACHE INTERNAL "")
  endif()
endif()

if(ENABLE_TIDY_CHECK)
  include(TidyTools)
  if(CLANG_TIDY_EXE)
    message(STATUS "Tidy Check enabled. Found Clang-Tidy: ${CLANG_TIDY_EXE}")
  else()
    message(WARNING "Tidy Check requested (ENABLE_TIDY_CHECK=ON) but Clang-Tidy was NOT found. Check will be disabled.")
    set(ENABLE_TIDY_CHECK OFF CACHE INTERNAL "")
  endif()
endif()

if(ENABLE_UNITTESTS)
  include(GtestTools)
  if(GTest_FOUND)
    message(STATUS "Unit tests enabled. Found GTest module")
  else()
    message(WARNING "GTest requested (ENABLE_TESTING=ON) but GTest was NOT found. Check will be disabled.")
    set(ENABLE_TIDY_CHECK OFF CACHE INTERNAL "")
  endif()
endif()

if(ENABLE_FORMAT_CHECK OR ENABLE_TIDY_CHECK)
  add_subdirectory(static)
endif()

if(ENABLE_UNITTESTS)
  add_subdirectory(unit)
endif()